@@ -2,4 +2,4 @@
 
 
 $(phplibdir)/libnatcJavaBridge.la:
-	cd $(srcdir)/server; sh autogen.sh && sh ./configure --with-java="$(PHP_JAVA_HOME)" --with-extdir="$(EXTENSION_DIR)" --libdir="$(phplibdir)" --datadir="$(phplibdir)" --bindir="$(phplibdir)" && make CFLAGS="$(CFLAGS_CLEAN)" GCJFLAGS="$(GCJFLAGS) $(CFLAGS_CLEAN)" install
+	cd $(srcdir)/server; sh autogen.sh && sh ./configure --with-java="$(PHP_JAVA_HOME)" --with-extdir="$(EXTENSION_DIR)" --libdir="$(phplibdir)" --datadir="$(phplibdir)" --bindir="$(phplibdir)" && make CFLAGS="$(CFLAGS_CLEAN)" GCJFLAGS="$(GCJFLAGS) `echo $(CFLAGS_CLEAN)|sed 's/-D[^ ]*//g'`" install
